Improvements: - better app closing, - timeouts for downloading web pages, - tool result and tool result call messages distigished - fixed issue with many updates for partial message - connection edition from main chat window